[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topologist"
version = "0.1.9"
description = "A production-hardened hyperdimensional neuro-symbolic topology system."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Robert McMenemy" }]
license = { text = "MIT" }
keywords = ["hyperdimensional-computing", "neuro-symbolic", "topology", "reasoning", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.24",
    "networkx>=3.1",
    "pydantic>=2.5",
    "typer>=0.9",
    "rich>=13.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=4.0",
]

gnn = [
    "torch>=2.0",
    "torch-geometric>=2.3"
]
streaming = [
    "aiokafka>=0.8",
    "redis>=4.0",
    "websockets>=11.0"
]
ann = [
    "annoy>=1.18"
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.23"
]
telemetry = [
    "opentelemetry-api>=1.14",
    "opentelemetry-sdk>=1.14"
]
db = [
    "psycopg2-binary>=2.9"
]

[project.urls]
Homepage = "https://github.com/Arkay92/Topologist"
Repository = "https://github.com/Arkay92/Topologist"
Documentation = "https://github.com/Arkay92/Topologist#readme"
Issues = "https://github.com/Arkay92/Topologist/issues"

[project.scripts]
topologist = "topologist.cli:app"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["topologist*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=topologist --cov-report=term-missing"

